Add intraday prices powered by Alpha Vantage
